# KNS2017

./: 2017__kns13_pysarenko_lab2.docx  README.md  lab2_1.m  m1f3.fig  m2f1.fig  m2f3.fig  m2f4.fig  m2f5.fig  my_fun4.m  my_fun5.m
Abram/RGR/: HelloWordCreator.java  HelloWordDecoder.java  HelloWordEvaluator.java  HelloWordModule.java  MutateOptimizer.java  MutateOptimizerModule.java  RGR_GIT_AB.docx  SalesmanCreator.java  SalesmanDecoder.java  SalesmanEvaluator.java  SalesmanModule.java  SalesmanProblem.java
Abram/lab1/: readme.txt
Abram/lab2/: Lab2_GIT_AB.docx  func1.m  func2.m  func3.m  func4.m  func5.m
Abram/lab3/: Lab3_GIT_AB.docx  Result.xlsx  insert_begining.m  roulette_wheel_indexes.m  tsp_ga.m
Abram/lab4/: Form1.cs  Lab4_GIT_AB.docx
Abram/lab5/: Lab5_GIT_AB.docx  MainForm.cs  MapControl.cs  TSPChromosome.cs  TSPFitnessFunction.cs
Berezka/lab1/: readme.txt
Boiko/RGR/: boiko_rgr.docx
Boiko/boiko_lab1/: readme.txt
Boiko/boiko_lab2/: Lab2_GA.docx  func2.m  func4.m  func5.m
Boiko/boiko_lab3/: Lab3_GA.docx  lab3_boiko.m
Boiko/boiko_lab4/: Lab4_GA.docx  MutationFcn.m  func_opt.m  lab4_boiko.m
Boiko/boiko_lab5/: Lab5_GA .docx  optim_function.m
Kohanowskyi/lab1/: readme.txt
Ladchenko/Ladchenko_Lab3/: GA.m  Lab5.m  mutation.m  recombination.m  zvit3.docx
Ladchenko/Ladchenko_lab1/: readme.txt
Ladchenko/Ladchenko_lab4/: zvit4.docx
Ladchenko/Ladchenko_lab5/: Cities.cs  Cities.xml  zvit5.docx
Nazar/Rozrahunkova/ParadisEO-2.0/QuickStart/Example/src/: CMakeLists.txt
Nazar_lab1/: readme.txt
Savchuk_RGR/: Савчук_Розрахункова.docx
(+200 files in other folders)
