######################################################################################
### 1) Include the sources
######################################################################################

include_directories(${PARADISEO_INCLUDE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src)

######################################################################################


######################################################################################
### 2) Define your target(s): just the flow-shop lib here
######################################################################################

set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

set(ZDT_SOURCES
		ZDT.cpp
		ZDTEval.cpp
		ZDT1Eval.cpp
		ZDT2Eval.cpp)

add_library(lZDT STATIC ${ZDT_SOURCES})

######################################################################################

